#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

RH-2009-11-11-0: Bugfix:     Hedeby
                               o build_testsuite.properies sets now 
                                 hedeby-upgrade.dir
                               o max_hosts_in_system_limit and cloud/simhost
                                 sets up cloud service with fixed_usage SLO
                                 (instead of perm_req)
                 Review:     TB

CR-2009-11-11-0: Bugfix:     increased timeout for verify complile clean in TS
                 Review:     SH

EB-2009-11-11-0: Bugfix:     fixed failing qstat tests that might occur when the
                             master machine is slow
                 Review:     JG

HP-2009-11-10-0: Enhancem.:  o added runlevel 100 test to slotwise suspend on
                               subordinate test that tests on all architectures
                 Review:     CR

CR-2009-11-09-1: Bugfix:     fixed get_ps_info()
                             fixed repriorization test
                 Belongs to: MP-2009-11-05-0
                 Review:     EB

CR-2009-11-09-0: Cleanup:    o removed additional waiting in 
                               set_config_and_propagate()
                             o removed empty lines in get_standard_job_info()
                 Bugfix:     o fixed issue 1914 test for >= GE 62
                 Belongs to: CR-2009-11-05-0
                 Review:     SH

MP-2009-11-06-0: Enhancem.:  o jsv.pm does not recognize -A option when used 
                               with qsub, test added for IZ 3151
                 Review:     CR
